[gd_scene load_steps=3 format=3 uid="uid://83vde1lunfcg"]

[ext_resource type="Script" uid="uid://pwvsnop3v50d" path="res://Codes/game_over.gd" id="1_ojehl"]
[ext_resource type="FontFile" uid="uid://cw5aumc7o6ajy" path="res://Assets/04B_30__.TTF" id="2_8fo1c"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_left = 0.25
anchor_right = 0.25
offset_left = -256.0
offset_right = -216.0
offset_bottom = 40.0
script = ExtResource("1_ojehl")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.4
anchor_top = 0.2
anchor_right = 6.4
anchor_bottom = 0.2
offset_left = 40.0
offset_top = 184.0
offset_right = 469.0
offset_bottom = 235.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.00392157, 0.921569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_8fo1c")
theme_override_font_sizes/font_size = 51
text = "GAME OVER"
horizontal_alignment = 1

[node name="HighscoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.4
anchor_top = 0.2
anchor_right = 6.4
anchor_bottom = 0.2
offset_left = 112.0
offset_top = 312.0
offset_right = 400.0
offset_bottom = 346.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.00392157, 0.921569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_8fo1c")
theme_override_font_sizes/font_size = 34
text = "HIGHSCORE:"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.4
anchor_top = 0.2
anchor_right = 6.4
anchor_bottom = 0.2
offset_left = 168.0
offset_top = 408.0
offset_right = 342.0
offset_bottom = 442.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.00392157, 0.921569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_8fo1c")
theme_override_font_sizes/font_size = 34
text = "SCORE:"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 528.0
offset_right = 624.0
offset_bottom = 570.0
theme_override_colors/font_color = Color(0.00392157, 0.921569, 0.372549, 1)
theme_override_fonts/font = ExtResource("2_8fo1c")
theme_override_font_sizes/font_size = 34
text = "RESTART"
icon_alignment = 1

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
